--- a/templates/mos.html
+++ b/templates/mos.html
@@ -34,7 +34,7 @@
                      <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                      <table>
-                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <thead><td><h3> Repeat</h3></td><td><h3> One Time </h3></td></thead>
                         <td>
                             <div class="overContainer">
                                 <img class="overImage ticket" src="static/ticket.png"  />
@@ -55,7 +55,7 @@
                      <h3> Average number of tickets purchased</h3>
                       <hr class="hr2">
                     <table >
-                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <thead><td><h3> Repeat</h3></td><td><h3> One Time </h3></td></thead>
                         <td>
                             <div class="overContainer">
                                 <img class="overImage ticket" src="static/ticket.png" />
@@ -88,7 +88,7 @@
                      <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                     <table >
-                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <thead><td><h3> Repeat</h3></td><td><h3> One Time </h3></td></thead>
                         <td>
                             <div class="overContainer">
                                 <img class="overImage ticket" src="static/ticket.png" />
@@ -109,7 +109,7 @@
                      <h3> Average number of tickets purchased</h3>
                       <hr class="hr2">
                     <table >
-                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <thead><td><h3> Repeat</h3></td><td><h3> One Time </h3></td></thead>
                         <td>
                             <div class="overContainer">
                                 <img class="overImage ticket" src="static/ticket.png" />
@@ -141,7 +141,7 @@
                      <h3> Number of customers are who are repeat purchases </h3>
                      <hr class="hr2">
                     <table >
-                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <thead><td><h3> Repeat</h3></td><td><h3> One Time </h3></td></thead>
                         <td>
                             <div class="overContainer">
                                 <img class="overImage ticket" src="static/ticket.png"  />
@@ -162,7 +162,7 @@
                      <h3> Average number of tickets purchased</h3>
                      <hr class="hr2">
                     <table>
-                        <thead><td><h3> One Time</h3></td><td><h3> Repeat</h3></td></thead>
+                        <thead><td><h3> Repeat</h3></td><td><h3> One Time </h3></td></thead>
                         <td>
                             <div class="overContainer">
                                 <img class="overImage ticket" src="static/ticket.png" />
