--- a/templates/pro.html
+++ b/templates/pro.html
@@ -100,19 +100,18 @@
         </td>
     </table>
     <div class="container">
-        <h2> Who?</h2>
+        <h2> What does this all mean?</h2>
         <hr>
-        <h3><b>Potentially You!</b></h3>
     </div>
 
-    <div class="container1 one" href="https://www.paballet.org/current-season">
+    <div class="container1 one">
         <div class="bk l">
             <div class="arrow top"></div>
             <div class="arrow bottom"></div>
         </div>
         <div class="skew l"></div>
         <div class="main">
-            <div href="https://www.paballet.org/current-season">Learn More About the 2016 Season</div>
+            <div>Breaking it down</div>
         </div>
         <div class="skew r"></div>
         <div class="bk r">
