--- a/templates/breaking.html
+++ b/templates/breaking.html
@@ -40,7 +40,10 @@
         <hr class="hr2">
         <h2> A web presence that can retain an audience with the same personal experience they find through other methods.</h2>
         <h1> But how?!</h1>
+        <hr class="hr2">
         <h2> Through web  design as elegant and refined as the Pennsylvania Ballet itself.</h2>
     </div>
 </body>
+            <h3> By John Tordoff <br> (tue85222)</h3>
+
 </html>
