--- a/templates/pro.html
+++ b/templates/pro.html
@@ -119,6 +119,8 @@
             <div class="arrow bottom"></div>
         </div>
     </div>
+            <h3> By John Tordoff <br> (tue85222)</h3>
+
 </body>
 
 <script src={{ url_for('static', filename='./bower_components/jquery/dist/jquery.min.js') }}></script>
