--- a/templates/index.html
+++ b/templates/index.html
@@ -25,10 +25,11 @@
         <br>
         <br>
 
-
         <input type="submit" class="btn-primary btn btn-lg" href="#" onclick="changePro()" value="Let's Start with Don Quixote">
-</div>
+
     </div>
+            <h3> By John Tordoff <br> (tue85222)</h3>
+</div>
 
     <script src={{ url_for('static', filename='./bower_components/jquery/dist/jquery.min.js') }}></script>
     <script src={{ url_for('static', filename='./bower_components/bootstrap/dist/js/bootstrap.min.js') }}></script>
