--- a/templates/mos.html
+++ b/templates/mos.html
@@ -188,5 +188,7 @@
     <script src={{ url_for('static', filename='./bower_components/bootstrap/dist/js/bootstrap.min.js') }}></script>
     <script src={{ url_for('static', filename='./bower_components/d3/d3.min.js') }}></script>
     <script src={{ url_for('static', filename='main.js') }}></script>
+            <h3> By John Tordoff <br> (tue85222)</h3>
+
 </body>
 </html>
